<resources>
    <string name="app_name">AHAP</string>
    <string name="title_contents">Contents</string>
    <string name="title_home">Posture</string>
    <string name="title_statistics">Analysis</string>
    <string name="profile">Profile</string>
    <string name="device_information">Device Information</string>
    <string name="instruction">Instruction</string>
    <string name="customer_service">Customer Support</string>
    <string name="friend">Friend</string>
    <string name="log_out">Log Out</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="Button1">My Records</string>
    <string name="Button2">Other\'s Records</string>
    <string name="Button3">Future Result</string>
    <string-array name="array1">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>
    <string name="string1">Contents</string>
    <string name="string2">Bookmark</string>
    <string name="string3">Round Shoulder Correction Routine A</string>
    <string name="string4">Turtle Neck Correction</string>
    <string name="string5">[Comment] Straightening in 5 minutes</string>
    <string name="string6">The story of correcting turtle neck!</string>
    <string name="string7">10 minutes a day! Correcting whole body posture</string>
    <string name="string8">manual therapy of omalgia II</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_cancel">Cancel</string>
    <string name="create_account">Create</string>
    <string name="bubble_text_state0">Press start button!</string>
    <string name="bubble_text_state1">The most ideal posture is..?</string>
    <string name="bubble_text_state2">It\'s measuring your posture now!</string>
    <string name="button_text_state0">Start\nMeasuring</string>
    <string name="button_text_state1">Set Right\nPosture</string>
    <string name="button_text_state2">Stop</string>
    <string name="tab_1">wear1</string>
    <string name="tab_2">wear2</string>
    <string name="tab_3">wear3</string>
    <string name="tab_4">wear4</string>
    <string name="tab_5">set</string>
    <string name="tab_6">alert</string>
    <string name="tab_7">analysis</string>
    <string name="tab_8">contents</string>
    <string name="prev">&lt; prev</string>
    <string name="next">next &gt;</string>
    <string name="title_option">Alert Option</string>
    <string name="instruction_title_1">How to wear</string>
    <string name="instruction_title_2">How to wear</string>
    <string name="instruction_title_3">How to wear</string>
    <string name="instruction_title_4">How to wear</string>
    <string name="instruction_title_5">How to measure</string>
    <string name="instruction_title_6">How to measure</string>
    <string name="instruction_title_7">Statistics &amp; Analysis</string>
    <string name="instruction_title_8">Contents</string>
    <string name="warning_title">Alert Option</string>
    <string name="warning1">Vertical Alerting Degree</string>
    <string name="warning2">Horizontal Alerting Degree</string>
    <string name="warning3">Alerting\nStarting Time</string>
    <string name="warning4">Alerting\nPeriod</string>
    <string-array name="array2">
        <item>1sec</item>
        <item>2sec</item>
        <item>3sec</item>
        <item>4sec</item>
        <item>5sec</item>
        <item>6sec</item>
        <item>7sec</item>
        <item>8sec</item>
        <item>9sec</item>
        <item>10sec</item>
    </string-array>
    <string name="warning_subtitle">Alerting Option</string>
    <string name="warning_subtitle2">Vibration Option</string>
    <string name="warning_subtitle3">Vibration Intensity Adjustment</string>
    <string-array name="array3">
        <item>Avatar1</item>
        <item>Avatar2</item>
        <item>Avatar3</item>
        <item>Avatar4</item>
        <item>Avatar5</item>
    </string-array>
    <string name="instruction_explanation_1">Take the device and the necklace.</string>
    <string name="instruction_explanation_2">Connect the device with the necklace.</string>
    <string name="instruction_explanation_3">Wearing the necklace with the device on the back of your neck.</string>
    <string name="instruction_explanation_4">It\'s done! </string>
    <string name="instruction_explanation_5">Straighten up your upper body and press the start button.</string>
    <string name="instruction_explanation_6">Adjust the alerting degree, starting time, period for when your body is slouched. And if needed, set on or off the vibration.</string>
    <string name="instruction_explanation_7">You can see your records daily/weekly/monthly/annual basis.</string>
    <string name="instruction_explanation_8">You can see various contents concerned with posture such as right exercise posture.</string>
    <string name="text_initial">Personal Trainer for Right Posture</string>
    <string name="text_profile">Nickname</string>
    <string name="text_device_information1">Product Name : CLYP</string>
    <string name="text_device_information2">Product Number : 1234-5678</string>
    <string name="text_device_information3">Version : 3.6.1</string>
    <string name="customer_service_text1">1. Bluetooth connection doesn\'t work</string>
    <string name="customer_service_text2">2. I don\'t know how to wear the device</string>
    <string name="customer_service_text3">3. How long does the battery last?</string>
    <string name="customer_service_text4">4. The data in my app have disappeared</string>
    <string name="customer_service_text5">5. Can I wear the device on other parts of my body?</string>
    <string name="customer_service_text6">6. Is there an iPhone app?</string>
    <string-array name="time">
        <item>Choose</item>
        <item>Main</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string name="statistics_button1">My record</string>
    <string name="statistics_button2">Other record</string>
    <string name="statistics_button3">DAILY REPORT</string>
    <string name="statistics_button4">WEEKLY REPORT</string>
    <string name="statistics_button5">MONTHLY REPORT</string>
    <string name="statistics_button6">ANNUAL REPORT</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="log_in_done">Logged in</string>
    <string name="not_correct">Fill in correct information</string>
    <string name="send_to_remote">Send</string>
    <string name="retry_after_bluetooth_on">Retry after bluetooth is on</string>
    <string name="bluetooth_off">Bluetooth turned off</string>
    <string name="retry_after_internet_on">Retry after Internet on</string>
    <string name="connected_with_device">Connected with device</string>
    <string name="bluetooth_on">Bluetooth turned on</string>
    <string name="id_duplicate">ID is duplicate</string>
    <string name="sign_up_done">Account created</string>
    <string name="fill_id">Fill in ID</string>
    <string name="fill_pw">Fill in PW</string>
    <string name="fill_name">Fill in name</string>
</resources>