<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/bluetooth_menu"
        android:icon="@drawable/ic_bluetooth"
        app:showAsAction="always"
        android:title=""/>
    <item
        android:id="@+id/option_menu"
        android:icon="@drawable/ic_option"
        app:showAsAction="always"
        android:title="" />
    <item
        android:id="@+id/profile_menu"
        app:showAsAction="never"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/device_information_menu"
        app:showAsAction="never"
        android:title="@string/device_information"
        />
    <item
        android:id="@+id/description_menu"
        app:showAsAction="never"
        android:title="@string/description"
        />
    <item
        android:id="@+id/customer_service_menu"
        app:showAsAction="never"
        android:title="@string/customer_service"
        />
</menu>