<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDarkGray"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp">
    <RelativeLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/arrow_container">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <TextView
                    android:id="@+id/title_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/description_title_1"
                    android:textSize="30dp"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:textColor="@color/colorLightBlue"

                    android:layout_gravity="center"/>
                <ImageView
                    android:layout_alignParentRight="true"
                    android:id="@+id/button_description_exit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_exit" />

            </RelativeLayout>
            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <Button
                        android:background="@drawable/shape_prev_next_button"
                        android:id="@+id/prev"
                        android:layout_width="80dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:text="@string/prev"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <Button
                        android:background="@drawable/shape_prev_next_button"
                        android:id="@+id/next"
                        android:layout_width="80dp"
                        android:layout_height="35dp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/next"
                        android:layout_gravity="center"
                        android:textSize="17dp"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/arrow_container"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_above="@id/description_navigation_view">
            <ImageView
                android:id="@+id/arrow1"
                android:src="@drawable/ic_arrow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/arrow2"
                android:src="@drawable/ic_arrow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:visibility="invisible"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/arrow3"
                android:src="@drawable/ic_arrow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:visibility="invisible"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/arrow4"
                android:src="@drawable/ic_arrow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:visibility="invisible"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/arrow5"
                android:src="@drawable/ic_arrow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:visibility="invisible"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/arrow6"
                android:src="@drawable/ic_arrow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:visibility="invisible"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/arrow7"
                android:src="@drawable/ic_arrow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:visibility="invisible"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/arrow8"
                android:src="@drawable/ic_arrow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:visibility="invisible"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/description_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorBlack"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/description_tab1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tab_1"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/description_tab2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tab_2"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/description_tab3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tab_3"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/description_tab4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tab_4"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/description_tab5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tab_5"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/description_tab6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tab_6"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/description_tab7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tab_7"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/description_tab8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tab_8"
                android:textColor="@color/colorWhite"
                android:textSize="12dp" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
